[metadata]
name = admoneo
version = attr: admoneo.__version__
author = artem dukhnitskiy
author_email = admoneo_bot@protonmail.com
description = Admoneo - Crypto Analyzing Bot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dukhniav/admoneo
project_urls =
    Bug Tracker = https://github.com/dukhniav/admoneo/issues
license = GPLv3
classifiers =
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: MacOS
    Operating System :: Unix
    Topic :: Office/Business :: Financial :: Investment


[options]
zip_safe = False
include_package_data = True
tests_require =
    pytest
    pytest-asyncio
    pytest-cov
    pytest-mock

packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    admoneo = admoneo.main:main

[flake8]
#ignore =
max-line-length = 100
max-complexity = 12
exclude =
    .git,
    __pycache__,
    .eggs,
    user_data,

[mypy]
ignore_missing_imports = True

[mypy-tests.*]
ignore_errors = True
